# GtkLuaConsole

./: .travis.yml  CMakeLists.txt  README.md  example.lua  main.cpp
glade/.svn/: all-wcprops  entries
glade/.svn/text-base/: console.glade.netbeans-base  console.glade.svn-base
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  configurations.xml  project.xml
nbproject/.svn/: all-wcprops  entries
nbproject/.svn/text-base/: Makefile-Debug.mk.svn-base
nbproject/private/: private.xml
nbproject/private/.svn/: all-wcprops  entries
